<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/forest_brown_darkest"
    android:fillViewport="true"
    tools:context=".ui.recommendation.RecommendationPlantResultActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/recommendation_result_title"
            android:textColor="@color/white"
            android:textSize="28sp"
            android:textStyle="bold" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/recommendation_result_subtitle"
            android:textColor="@color/forest_beige"
            android:textSize="14sp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_plant_recommendations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            tools:listitem="@layout/item_plant_recommendation" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go_to_dashboard"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/manrope_bold"
            android:text="@string/btn_go_to_dashboard"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@color/forest_green_light"
            app:cornerRadius="8dp" />

    </LinearLayout>

</ScrollView>
